...
    <string name="media">Media</string>
    <string name="location">Location</string>
    <string name="property_type">Type of property</string>
    <string name="property_price">Price</string>
    <string name="property_entry_date">Entry Date</string>
    <string name="property_sold_date">Sold Date</string>
    <string name="euros_symbol" translatable="false">€</string>
    <string name="dollars_symbol" translatable="false">$</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="square_meter" translatable="false">m²</string>
...
