...
            android:minHeight="60dp"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/price_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sold_date_text_input_layout" />

        <TextView
            android:id="@+id/label_interest_points"
...
